2006-06-11  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * backend/commit.py: commit() implemented
    * backend/fileops.py: remove() implemented
    * backend/errors.py: more exceptions added
    * more detailed comments for the different functions

2006-06-10  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * backend/errors.py: some basic exceptions added
    * backend/fileops.py: mkdir() and add() implemented 
    * backend/init.py: init() and branch() implemented
    * The work has begun :)