@@ -1,3 +1,9 @@
+2006-06-12  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
+
+    * backend/init.py: checkout() implemented - not tested yet
+    * backend/commit.py: push() implemented - not tested yet
+    * backend/error.py: another bunch of exceptions added
+
 2006-06-11  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
 
     * backend/commit.py: commit() implemented
